Add Disqus plugin

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ menu:
     url: /feed.xml
 email: gregorherda@gmail.com
 # See: https://disqus.com/
-disqus_username: gregorherda
+disqus_username: gregorhd
 # Contact Form Setting
 # See: https://formspree.io/
 formspree_form_id: mzbyyepj
